test/libhyperion/syntaxTests/functionTypes/function_types_variable_visibility.hyp
contract C {
    function(bytes memory) a1;
    function(bytes memory) internal b1;
    function(bytes memory) internal internal b2;
    function(bytes memory) external c1;
    function(bytes memory) external internal c2;
    function(bytes memory) external public c3;
}
// ----
// TypeError 4888: (137-171): External function types are not supported with this address size: address (512 bits) plus selector (32 bits) exceeds the VM word size (512 bits).
